# tensorflow-community-wheels-docker

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
compose/: Makefile  bootstrap.sh  bootstrap.yml  local.sh  run.yml  runapp.sh
