[tool.poetry]
name = "tensorflow_community_wheels_docker_trainer"
version = "0.1.0"
description = ""
authors = ["Den Elston <elstton@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.0"
scikit-learn = "^0.24.0"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^.*"
ipdb = "^.*"
pytest-mock = "^.*"
aniso8601 = "^.*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
